fix styling in buttons (order vouchers), fix Shipping Address inputs and fix menu icon for collapse

--- a/src/themes/default/styles/component.nav.css
+++ b/src/themes/default/styles/component.nav.css
@@ -98,7 +98,7 @@
             &--menu {
                 position: absolute;
                 right: 0;
-                top: calc($unit * 17);
+                top: calc($unit * 14);
                 
                 display: flex;
                 padding: calc($unit * 3) calc($unit * 1);
